# black_hole_raytracer

./: CMakeLists.txt  README.md  blackhole-roadmap.md
literature/: guide.txt
output/: image.ppm
src/: main.cpp
src/classes/: ray.h  vec3.h  vec3.hpp  vec3ops.cpp  vec3ops.h
src/core/: camera.cpp  camera.h  ray.cpp  ray.h
src/math/: vec3.cpp  vec3.h
src/physics/: four_momentum.cpp  four_momentum.h  schwarzchild_metric.cpp  schwarzchild_metric.h
